--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moviewatcher",
+  "name": "MovieWatcher",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^9.2.0",
-    "electron-packager": "^15.0.0",
-    "line-reader": "^0.4.0"
+    "line-reader": "^0.4.0",
+    "electron-packager": "^15.0.0"
+  },
+  "devDependencies": {
+    "electron": "^9.2.1"
   }
 }
