--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "line-reader": "^0.4.0"
+  },
+  "devDependencies": {
     "electron": "^9.2.1",
-    "line-reader": "^0.4.0",
-    "electron-packager": "^15.0.0"
+    "electron-packager": "^15.1.0"
   }
 }
