--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "MovieWatcher",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.20.0",
-    "line-reader": "^0.4.0"
-  },
-  "devDependencies": {
-    "electron": "^9.2.1",
-    "electron-packager": "^15.1.0"
-  }
+    "name": "MovieWatcher",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron ."
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.20.0"
+    },
+    "devDependencies": {
+        "electron": "^9.2.1",
+        "electron-packager": "^15.1.0"
+    }
 }
